--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,63 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Gallery • Australia Trip Journal</title>
+  <meta name="description" content="Photos and highlights from my Australia trip." />
+  <link rel="stylesheet" href="assets/styles.css" />
+</head>
 
+<body>
+  <div class="bg-rotator" aria-hidden="true">
+    <div class="bg-layer" id="bgA"></div>
+    <div class="bg-layer" id="bgB"></div>
+    <div class="bg-overlay"></div>
+  </div>
+
+  <header class="topbar">
+    <div class="inner">
+      <div class="brand">
+        <div class="logo" aria-hidden="true"></div>
+        <div>
+          <h1>Australia Trip Journal</h1>
+          <p>Gallery</p>
+        </div>
+      </div>
+
+      <nav aria-label="Primary">
+        <a href="index.html" data-page="index.html">Home</a>
+        <a href="itinerary.html" data-page="itinerary.html">Itinerary</a>
+        <a href="blog.html" data-page="blog.html">Blog</a>
+        <a href="gallery.html" data-page="gallery.html">Gallery</a>
+        <a href="about.html" data-page="about.html">About</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="wrap">
+    <section class="card section">
+      <div class="sectionHeader">
+        <div>
+          <h2>Gallery</h2>
+          <p>Add your real images later in <code>assets/images/</code> and link them here.</p>
+        </div>
+      </div>
+
+      <div class="gallery">
+        <div class="tile col-8"><span>Sydney Harbour</span></div>
+        <div class="tile col-4"><span>Bondi Walk</span></div>
+        <div class="tile col-4"><span>Blue Mountains</span></div>
+        <div class="tile col-4"><span>Melbourne</span></div>
+        <div class="tile col-4"><span>Great Ocean Rd</span></div>
+        <div class="tile col-6"><span>Uluru</span></div>
+        <div class="tile col-6"><span>Great Barrier Reef</span></div>
+      </div>
+    </section>
+
+    <p class="footer">Tip: you can upload photos to GitHub and link them as <code>assets/images/filename.jpg</code></p>
+  </main>
+
+  <script src="assets/app.js"></script>
+</body>
+</html>
