--- a/itinerary.html
+++ b/itinerary.html
@@ -1,1 +1,97 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Itinerary • Australia Trip Journal</title>
+  <meta name="description" content="My Australia trip itinerary." />
+  <link rel="stylesheet" href="assets/styles.css" />
+</head>
 
+<body>
+  <div class="bg-rotator" aria-hidden="true">
+    <div class="bg-layer" id="bgA"></div>
+    <div class="bg-layer" id="bgB"></div>
+    <div class="bg-overlay"></div>
+  </div>
+
+  <header class="topbar">
+    <div class="inner">
+      <div class="brand">
+        <div class="logo" aria-hidden="true"></div>
+        <div>
+          <h1>Australia Trip Journal</h1>
+          <p>Itinerary</p>
+        </div>
+      </div>
+
+      <nav aria-label="Primary">
+        <a href="index.html" data-page="index.html">Home</a>
+        <a href="itinerary.html" data-page="itinerary.html">Itinerary</a>
+        <a href="blog.html" data-page="blog.html">Blog</a>
+        <a href="gallery.html" data-page="gallery.html">Gallery</a>
+        <a href="about.html" data-page="about.html">About</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="wrap">
+    <section class="card section">
+      <div class="sectionHeader">
+        <div>
+          <h2>Itinerary</h2>
+          <p>Edit this page as your plan changes.</p>
+        </div>
+      </div>
+
+      <div class="itinerary">
+        <div class="day">
+          <div>
+            <div class="pill">Day 1 <span class="badge">Arrival</span></div>
+          </div>
+          <div>
+            <h3>Sydney</h3>
+            <ul>
+              <li>Check in</li>
+              <li>Harbour walk at golden hour</li>
+              <li>Early night</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="day">
+          <div>
+            <div class="pill">Day 2 <span class="badge">Coast</span></div>
+          </div>
+          <div>
+            <h3>Sydney</h3>
+            <ul>
+              <li>Bondi to Coogee coastal walk</li>
+              <li>Swim between the flags</li>
+              <li>Seafood dinner</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="day">
+          <div>
+            <div class="pill">Day 3 <span class="badge">Nature</span></div>
+          </div>
+          <div>
+            <h3>Blue Mountains</h3>
+            <ul>
+              <li>Katoomba + lookouts</li>
+              <li>Long walk</li>
+              <li>Sunset photos</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <p class="footer">This page is just HTML — simplest possible for travel edits.</p>
+  </main>
+
+  <script src="assets/app.js"></script>
+</body>
+</html>
